выровнил элементы, заголовок и описание

--- a/source/sass/components/description.scss
+++ b/source/sass/components/description.scss
@@ -1,8 +1,8 @@
 .description {
   margin: 0;
-  padding: 0;
+  padding: 0 0 0 20px;
 
-  width: 230px;
+  width: 250px;
 
   font: $font-description-large-mobile;
   text-transform: uppercase;
