--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -33,7 +33,7 @@
 @import "./blocks/additional-products.scss";
 @import "./blocks/additional-product-card.scss";
 // @import "./blocks/main-form.scss";
-@import "./blocks/cat-information.scss";
+@import "./blocks/info.scss";
 @import "./blocks/label-text.scss";
 @import "./blocks/label-radio.scss";
 @import "./blocks/contact-details.scss";
