--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,6 +14,7 @@
 @import "./components/title.scss";
 @import "./components/button.scss";
 @import "./components/description.scss";
+@import "./components/text-input.scss";
 
 /* blocks */
 @import "./blocks/page-body.scss";
