начал стилизовать text-input

--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -25,6 +25,7 @@ $color-12: #eaeaea;
 $color-13: #cdcdcd;
 $color-14: #5eaa2f;
 $color-15: #64a63b;
+$color-16: #e7e7e7;
 
 /* background-color */
 $background-color-1: #000000;
@@ -42,6 +43,7 @@ $background-color-12: #eaeaea;
 $background-color-13: #cdcdcd;
 $background-color-14: #5eaa2f;
 $background-color-15: #64a63b;
+$background-color-16: #e7e7e7;
 
 /* button-fonts */
 $font-button-nutrition-mobile: 400 1.6rem/1.28 "Oswald", "Arial", sans-serif;
