--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,6 +18,7 @@
 
 /* blocks */
 @import "./blocks/page-body.scss";
+@import "./blocks/form-page.scss";
 @import "./blocks/main-header.scss";
 @import "./blocks/main-nav.scss";
 @import "./blocks/main-container.scss";
