--- a/source/sass/components/text-input.scss
+++ b/source/sass/components/text-input.scss
@@ -3,12 +3,16 @@
   padding: 0 20px;
 
   display: flex;
-  column-gap: 15px;
+  column-gap: 14px;
+
+  &:last-child {
+    margin: 0;
+  }
 }
 
 .text-input__label {
   display: block;
-  padding: 0 0 0;
+  padding: 14px 0 0;
 
   font: $font-label-mobile;
   text-transform: uppercase;
@@ -26,9 +30,17 @@
 
 .text-input__input {
   margin: 0;
-  padding: 0;
+  padding: 0 14px;
   border: 1px solid $background-color-16;
 
   width: 100%;
   height: 45px;
+
+  font: $font-label-mobile;
+  text-transform: uppercase;
+  color: $color-5;
+
+  &::placeholder {
+    color: inherit;
+  }
 }
