Стилизовал type-program и radio-input радио-кнопки в форме в моб. разрешении

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,6 +15,7 @@
 @import "./components/button.scss";
 @import "./components/description.scss";
 @import "./components/text-input.scss";
+@import "./components/radio-input.scss";
 
 /* blocks */
 @import "./blocks/page-body.scss";
@@ -42,3 +43,4 @@
 @import "./blocks/comment.scss";
 @import "./blocks/additional.scss";
 @import "./blocks/label-checkbox.scss";
+@import "./blocks/type-program.scss";
