Добавил состояние полям в info, добавил им атрибут required

--- a/source/sass/components/text-input.scss
+++ b/source/sass/components/text-input.scss
@@ -43,4 +43,14 @@
   &::placeholder {
     color: inherit;
   }
+
+  &:hover {
+    border-color: $background-color-13;
+  }
+
+  &:focus {
+    outline: 2px solid $background-color-5;
+
+    border: none;
+  }
 }
