--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -26,6 +26,7 @@ $color-13: #cdcdcd;
 $color-14: #5eaa2f;
 $color-15: #64a63b;
 $color-16: #e7e7e7;
+$color-17: #ff8282;
 
 /* background-color */
 $background-color-1: #000000;
@@ -44,6 +45,7 @@ $background-color-13: #cdcdcd;
 $background-color-14: #5eaa2f;
 $background-color-15: #64a63b;
 $background-color-16: #e7e7e7;
+$background-color-17: #ff8282;
 
 /* button-fonts */
 $font-button-nutrition-mobile: 400 1.6rem/1.28 "Oswald", "Arial", sans-serif;
