Поправил состояние text-input. Добавил состояние radio-input

--- a/source/sass/components/text-input.scss
+++ b/source/sass/components/text-input.scss
@@ -19,6 +19,10 @@
   color: $color-5;
   text-wrap: nowrap;
 
+  &:hover {
+    cursor: pointer;
+  }
+
   @media (min-width: $tablet-width) {
     font: $font-label-tablet;
   }
@@ -52,13 +56,13 @@
     outline: 2px solid $background-color-5;
     outline-offset: -2px;
 
-    border: transparent;
+    border: 1px solid transparent;
   }
 
   &:invalid {
     outline: 2px solid $background-color-17;
     outline-offset: -2px;
 
-    border: transparent;
+    border: 1px solid transparent;
   }
 }
