--- a/source/sass/components/radio-input.scss
+++ b/source/sass/components/radio-input.scss
@@ -15,7 +15,7 @@
 
   font: $font-label-mobile;
   text-transform: uppercase;
-  color: $color-5;
+  color: $color-8;
 
   &::before {
     content: "";
@@ -49,6 +49,20 @@
 
     background-color: $background-color-3;
   }
+
+  &:hover {
+    cursor: pointer;
+
+    &::before {
+      border-color: $background-color-18;
+    }
+  }
+}
+
+.radio-input__label[disabled] {
+  pointer-events: none;
+
+  opacity: 0.3;
 }
 
 .radio-input__input:checked + .radio-input__label::after {
