приступил  к стилизации contact-details, и к компоненту title-line

--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -151,6 +151,10 @@ $font-title-medium-mobile: 400 2.4rem/1.54 "Oswald", "Arial", sans-serif;
 $font-title-medium-tablet: 400 3.6rem/1 "Oswald", "Arial", sans-serif;
 $font-title-medium-desktop: 400 3.6rem/1 "Oswald", "Arial", sans-serif;
 
+$font-title-line-mobile: 400 2.4rem/1.08 "Oswald", "Arial", sans-serif;
+$font-title-line-tablet: 400 3.6rem / normal "Oswald", "Arial", sans-serif;
+$font-title-line-desktop: 400 3.6rem / normal "Oswald", "Arial", sans-serif;
+
 /* description-fonts */
 $font-description-large-mobile: 400 1.4rem/1.28 "Oswald", "Arial", sans-serif;
 $font-description-large-tablet: 400 2rem/1.5 "Oswald", "Arial", sans-serif;
