--- a/source/sass/blocks/contact-details.scss
+++ b/source/sass/blocks/contact-details.scss
@@ -1,5 +1,13 @@
+.contact-details {
+  padding: 27px 0 0;
+}
+
 .contact-details__title {
-  @include margin-reset;
-  font: $font-title-medium-mobile;
-  line-height: 1.08;
+  padding: 0 0 0 20px;
+
+  width: 205px;
+
+  &::before {
+    top: 15px;
+  }
 }
