Стилизовал псевдоэлемент - зеленую линию для contact-details.

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,7 +12,7 @@
 
 /* components */
 @import "./components/title.scss";
-@import "./components/title-line.scss";
+@import "./components/title-medium.scss";
 @import "./components/button.scss";
 @import "./components/description.scss";
 @import "./components/text-input.scss";
