--- a/source/sass/blocks/contact-details.scss
+++ b/source/sass/blocks/contact-details.scss
@@ -1,11 +1,33 @@
 .contact-details {
   padding: 27px 0 0;
+
+  position: relative;
+
+  &::before {
+    content: "";
+    display: block;
+
+    width: 100%;
+    height: 2px;
+
+    position: absolute;
+    top: 42px;
+    left: 0;
+    z-index: -1;
+
+    background-color: $background-color-3;
+  }
 }
 
 .contact-details__title {
   padding: 0 0 0 20px;
 
-  width: 205px;
+  width: 227px;
+
+  position: relative;
+  z-index: 1;
+
+  background-color: $background-color-2;
 
   &::before {
     top: 15px;
