--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -147,13 +147,9 @@ $font-title-large-mobile: 400 3.6rem/1.11 "Oswald", "Arial", sans-serif;
 $font-title-large-tablet: 400 6rem/1 "Oswald", "Arial", sans-serif;
 $font-title-large-desktop: 400 6rem/1 "Oswald", "Arial", sans-serif;
 
-$font-title-medium-mobile: 400 2.4rem/1.54 "Oswald", "Arial", sans-serif;
-$font-title-medium-tablet: 400 3.6rem/1 "Oswald", "Arial", sans-serif;
-$font-title-medium-desktop: 400 3.6rem/1 "Oswald", "Arial", sans-serif;
-
-$font-title-line-mobile: 400 2.4rem/1.08 "Oswald", "Arial", sans-serif;
-$font-title-line-tablet: 400 3.6rem / normal "Oswald", "Arial", sans-serif;
-$font-title-line-desktop: 400 3.6rem / normal "Oswald", "Arial", sans-serif;
+$font-title-medium-mobile: 400 2.4rem/1.08 "Oswald", "Arial", sans-serif;
+$font-title-medium-tablet: 400 3.6rem / normal "Oswald", "Arial", sans-serif;
+$font-title-medium-desktop: 400 3.6rem / normal "Oswald", "Arial", sans-serif;
 
 /* description-fonts */
 $font-description-large-mobile: 400 1.4rem/1.28 "Oswald", "Arial", sans-serif;
