Стилизовал comments, добавил комментарий и к нему состояние

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,6 +17,7 @@
 @import "./components/description.scss";
 @import "./components/text-input.scss";
 @import "./components/radio-input.scss";
+@import "./components/textarea.scss";
 
 /* blocks */
 @import "./blocks/page-body.scss";
@@ -45,3 +46,4 @@
 @import "./blocks/additional.scss";
 @import "./blocks/label-checkbox.scss";
 @import "./blocks/type-program.scss";
+@import "./blocks/comments.scss";
