--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,6 +18,7 @@
 @import "./components/text-input.scss";
 @import "./components/radio-input.scss";
 @import "./components/textarea.scss";
+@import "./components/checkbox-input.scss";
 
 /* blocks */
 @import "./blocks/page-body.scss";
