--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -9,7 +9,7 @@
     height: 2px;
 
     position: absolute;
-    top: 15px;
+    top: 14px;
     left: 0;
     z-index: -1;
 
@@ -18,6 +18,7 @@
 }
 
 .additional__title {
+  margin: 0 0 33px;
   padding: 0 0 0 20px;
 
   width: 181px;
@@ -32,7 +33,7 @@
 .additional__item {
   margin: 0 0 13px;
 
-  min-height: 40px;
+  min-height: 30px;
 
   &:last-child {
     margin: 0;
