--- a/source/sass/components/checkbox-input.scss
+++ b/source/sass/components/checkbox-input.scss
@@ -5,7 +5,7 @@
 .checkbox-input__label {
   display: block;
 
-  padding: 0 0 0 45px;
+  padding: 7px 0 0 45px;
 
   font: $font-label-mobile;
   text-transform: uppercase;
@@ -26,4 +26,26 @@
 
     border: 1px solid $background-color-13;
   }
+
+  &::after {
+    content: "";
+    display: none;
+
+    width: 26px;
+    height: 26px;
+
+    background: url("../img/checkbox-tick.svg") no-repeat center;
+
+    position: absolute;
+    top: 3px;
+    left: 2px;
+  }
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.checkbox-input__input:checked + .checkbox-input__label::after {
+  display: block;
 }
