Стилизовал additional, кнопку формы и обязательный текст

--- a/source/sass/blocks/catalog-card.scss
+++ b/source/sass/blocks/catalog-card.scss
@@ -20,7 +20,7 @@
 }
 
 .catalog-card__link {
-  font: $font-button-catalog-mobile;
+  font: $font-button-mobile;
 
   &--show-more {
     background-color: $background-color-4;
