--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -50,13 +50,9 @@ $background-color-17: #ff8282;
 $background-color-18: #bababa;
 
 /* button-fonts */
-$font-button-nutrition-mobile: 400 1.6rem/1.28 "Oswald", "Arial", sans-serif;
-$font-button-nutrition-tablet: 400 2rem/1 "Oswald", "Arial", sans-serif;
-$font-button-nutrition-desktop: 400 2rem/1 "Oswald", "Arial", sans-serif;
-
-$font-button-catalog-mobile: 400 1.6rem/1.25 "Oswald", "Arial", sans-serif;
-$font-button-catalog-tablet: 400 1.6rem/1.25 "Oswald", "Arial", sans-serif;
-$font-button-catalog-desktop: 400 1.6rem/1.25 "Oswald", "Arial", sans-serif;
+$font-button-mobile: 400 1.6rem/1.25 "Oswald", "Arial", sans-serif;
+$font-button-tablet: 400 1.6rem/1.25 "Oswald", "Arial", sans-serif;
+$font-button-desktop: 400 1.6rem/1.25 "Oswald", "Arial", sans-serif;
 
 /* main-nav fonts */
 $font-text-nav-list-mobile: 500 1.9rem/1 "Oswald", "Arial", sans-serif;
@@ -105,6 +101,11 @@ $font-title-living-example-result-desktop: 400 2rem/1 "Oswald", "Arial",
 
 /* html-academy-logo fonts */
 $font-html-academy-logo: 400 1.6rem / normal "Lato", "Arial", sans-serif;
+
+/* form font */
+$font-text-form-small-mobile: 400 1.4rem/1.14 "Lato", "Arial", sans-serif;
+$font-text-form-small-tablet: 400 1.6rem/1 "Lato", "Arial", sans-serif;
+$font-text-form-small-desktop: 400 1.6rem/1 "Lato", "Arial", sans-serif;
 
 /* catalog-card fonts */
 $font-heading-catalog-card-mobile: 400 1.6rem/1.25 "Oswald", "Arial", sans-serif;
