--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -48,3 +48,4 @@
 @import "./blocks/label-checkbox.scss";
 @import "./blocks/type-program.scss";
 @import "./blocks/comments.scss";
+@import "./blocks/form.scss";
