--- a/source/sass/blocks/location.scss
+++ b/source/sass/blocks/location.scss
@@ -1,5 +1,15 @@
 .location {
   position: relative;
+
+  min-height: 474px;
+
+  @media (min-width: $desktop-width) {
+    min-height: 600px;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-height: 400px;
+  }
 }
 
 .location__invation {
@@ -8,7 +18,7 @@
   display: flex;
   justify-content: space-between;
 
-  min-height: 112px;
+  min-height: 113px;
 
   background-color: $background-color-4;
 
@@ -23,14 +33,15 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding: 60px 75px 40px 80px;
+    padding: 62px 75px 40px 80px;
 
     width: 565px;
-    min-height: 199px;
+    min-height: 200px;
 
-    position: absolute;
-    top: 96px;
+    position: relative;
+    top: 293px;
     left: 110px;
+    z-index: 4;
   }
 }
 
@@ -87,9 +98,27 @@
   }
 }
 
+.location__map {
+  position: relative;
+}
+
+.location__map-image {
+  display: flex;
+
+  margin: auto;
+
+  position: relative;
+  z-index: 1;
+}
+
 .location__map-iframe {
   width: 100%;
   height: 362px;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
 
   @media (min-width: $tablet-width) {
     height: 400px;
