--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -4,6 +4,12 @@
   background-color: $background-color-4;
 }
 
+.main-footer__location {
+  @media (min-width: $desktop-width) {
+    margin: -198px 0 0;
+  }
+}
+
 .main-footer__wrapper {
   min-height: 240px;
 
