Стилизовал карту - айфрейм и карту-картинку во всех разрешениях, пеперолнение проходит

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -49,3 +49,4 @@
 @import "./blocks/type-program.scss";
 @import "./blocks/comments.scss";
 @import "./blocks/form.scss";
+@import "./blocks/map.scss";
