--- a/source/sass/blocks/location.scss
+++ b/source/sass/blocks/location.scss
@@ -8,7 +8,12 @@
   }
 
   @media (min-width: $desktop-width) {
+    padding-top: 95px;
+    padding-bottom: 105px;
+
     min-height: 400px;
+
+    overflow: hidden;
   }
 }
 
@@ -34,13 +39,14 @@
 
   @media (min-width: $desktop-width) {
     padding: 62px 75px 40px 80px;
+    margin: 0 0 0 -610px;
 
     width: 565px;
     min-height: 200px;
 
     position: relative;
-    top: 293px;
-    left: 110px;
+    top: 0;
+    left: 50%;
     z-index: 4;
   }
 }
@@ -95,32 +101,5 @@
 
   @media (min-width: $desktop-width) {
     text-align: left;
-  }
-}
-
-.location__map {
-  position: relative;
-}
-
-.location__map-image {
-  display: flex;
-
-  margin: auto;
-
-  position: relative;
-  z-index: 1;
-}
-
-.location__map-iframe {
-  width: 100%;
-  height: 362px;
-
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 2;
-
-  @media (min-width: $tablet-width) {
-    height: 400px;
   }
 }
