Приступил к планшету в форме. Стилизовал основной заголовок и текст

--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -1,6 +1,10 @@
 .main-header {
   &--line {
     border-bottom: 1px solid $background-color-11;
+
+    @media (min-width: $tablet-width) {
+      border-bottom: none;
+    }
   }
 
   @media (min-width: $tablet-width) {
