--- a/source/sass/blocks/form-page.scss
+++ b/source/sass/blocks/form-page.scss
@@ -1,3 +1,20 @@
+.form-page__title {
+  margin: 0;
+  padding: 0;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 0 54px;
+    padding: 0 0 0 69px;
+  }
+}
+
 .form-page__description {
   margin: 0 0 39px;
+
+  @media (min-width: $tablet-width) {
+    margin: 0;
+    padding: 0 0 0 69px;
+
+    width: 400px;
+  }
 }
