--- a/source/sass/blocks/form-page.scss
+++ b/source/sass/blocks/form-page.scss
@@ -12,7 +12,7 @@
   margin: 0 0 39px;
 
   @media (min-width: $tablet-width) {
-    margin: 0;
+    margin: 0 0 66px;
     padding: 0 0 0 69px;
 
     width: 400px;
