Стилиозовал радио-инпуты в планшете

--- a/source/sass/blocks/type-program.scss
+++ b/source/sass/blocks/type-program.scss
@@ -1,6 +1,13 @@
 .type-program {
   padding: 22px 0 18px;
   border-bottom: 1px solid $background-color-11;
+
+  @media (min-width: $tablet-width) {
+    padding: 27px 27px 21px;
+    border: 1px solid $background-color-16;
+
+    min-height: 196px;
+  }
 }
 
 .type-program__list {
@@ -13,4 +20,8 @@
   &:last-child {
     margin: 0;
   }
+
+  // @media (min-width: $tablet-width) {
+  //   margin: 0 0 16px;
+  // }
 }
