--- a/source/sass/blocks/form-page.scss
+++ b/source/sass/blocks/form-page.scss
@@ -18,3 +18,11 @@
     width: 400px;
   }
 }
+
+.form__section {
+  @media (min-width: $tablet-width) {
+    &:nth-child(2) {
+      margin: 0 70px;
+    }
+  }
+}
