--- a/source/sass/blocks/info.scss
+++ b/source/sass/blocks/info.scss
@@ -3,6 +3,7 @@
   border-bottom: 1px solid $background-color-11;
 
   @media (min-width: $tablet-width) {
+    padding: 0 0 72px;
     border-bottom: none;
   }
 }
