--- a/source/sass/components/radio-input.scss
+++ b/source/sass/components/radio-input.scss
@@ -4,6 +4,12 @@
   position: relative;
 
   min-height: 30px;
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+
+    min-height: 40px;
+  }
 }
 
 .radio-input__label {
@@ -15,7 +21,7 @@
 
   font: $font-label-mobile;
   text-transform: uppercase;
-  color: $color-8;
+  color: $color-5;
 
   &::before {
     content: "";
@@ -31,6 +37,14 @@
 
     width: 30px;
     height: 30px;
+
+    @media (min-width: $tablet-width) {
+      width: 40px;
+      height: 40px;
+
+      top: -5px;
+      left: -1px;
+    }
   }
 
   &::after {
@@ -48,6 +62,14 @@
     height: 13px;
 
     background-color: $background-color-3;
+
+    @media (min-width: $tablet-width) {
+      width: 18px;
+      height: 18px;
+
+      top: 6px;
+      left: 10px;
+    }
   }
 
   &:hover {
@@ -56,6 +78,12 @@
     &::before {
       border-color: $background-color-18;
     }
+  }
+
+  @media (min-width: $tablet-width) {
+    padding: 0 0 0 59px;
+
+    font: $font-label-tablet;
   }
 }
 
