--- a/source/sass/blocks/form-page.scss
+++ b/source/sass/blocks/form-page.scss
@@ -22,7 +22,7 @@
 .form__section {
   @media (min-width: $tablet-width) {
     &:nth-child(2) {
-      margin: 0 70px;
+      margin: 0 70px 45px;
     }
   }
 }
