--- a/source/sass/components/checkbox-input.scss
+++ b/source/sass/components/checkbox-input.scss
@@ -1,5 +1,9 @@
 .checkbox-input {
   padding: 0 20px;
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+  }
 }
 
 .checkbox-input__label {
@@ -25,6 +29,11 @@
     left: 0;
 
     border: 1px solid $background-color-13;
+
+    @media (min-width: $tablet-width) {
+      width: 40px;
+      height: 40px;
+    }
   }
 
   &::after {
@@ -39,6 +48,13 @@
     position: absolute;
     top: 3px;
     left: 2px;
+
+    @media (min-width: $tablet-width) {
+      background-size: 48px 36px;
+
+      top: 7px;
+      left: 7px;
+    }
   }
 
   &:hover {
@@ -47,6 +63,12 @@
     &::before {
       border-color: $background-color-18;
     }
+  }
+
+  @media (min-width: $tablet-width) {
+    padding: 6px 0 0 60px;
+
+    font: $font-label-tablet;
   }
 }
 
