--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -6,7 +6,18 @@
   margin: 0 20px 22px;
   padding: 10px 44px;
 
-  width: 87%;
+  width: calc(100% - 40px);
+
+  @media (min-width: $tablet-width) {
+  }
+}
+
+.form__section {
+  @media (min-width: $tablet-width) {
+    &:nth-child(2) {
+      margin: 0 70px 45px;
+    }
+  }
 }
 
 .form__text-required {
