Стилизовал additional, кнопку и текст в form

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,5 +1,9 @@
 .form {
   padding: 0 0 31px;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 0 60px;
+  }
 }
 
 .form__button {
@@ -9,6 +13,12 @@
   width: calc(100% - 40px);
 
   @media (min-width: $tablet-width) {
+    margin: 0 55px 0 70px;
+
+    width: 284px;
+    min-height: 54px;
+
+    font: $font-button-tablet;
   }
 }
 
@@ -26,4 +36,13 @@
 
   font: $font-text-form-small-mobile;
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    display: inline-block;
+
+    position: relative;
+    top: -5px;
+
+    font: $font-text-form-small-tablet;
+  }
 }
