--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -17,46 +17,52 @@
 
     background-color: $background-color-3;
   }
-}
-
-.additional__title {
-  margin: 0 0 33px;
-  padding: 0 0 0 20px;
-
-  width: 181px;
-
-  background-color: $background-color-2;
 
   @media (min-width: $tablet-width) {
-    margin: 0 0 32px 30px;
-    padding: 0 0 0 39px;
-
-    width: 292px;
-
-    position: relative;
-    top: -17px;
+    padding: 0 0 44px;
   }
-}
 
-.additional__list {
-  @include list-reset;
+  .additional__title {
+    margin: 0 0 33px;
+    padding: 0 0 0 20px;
 
-  @media (min-width: $tablet-width) {
-    margin: 0 70px 0;
+    width: 181px;
 
-    display: flex;
-    flex-wrap: wrap;
-    gap: 22px 123px;
+    background-color: $background-color-2;
+
+    @media (min-width: $tablet-width) {
+      margin: 0 0 32px 30px;
+      padding: 0 0 0 39px;
+
+      width: 292px;
+
+      position: relative;
+      top: -17px;
+    }
   }
-}
 
-.additional__item {
-  margin: 0 0 13px;
+  .additional__list {
+    @include list-reset;
 
-  min-width: 221px;
-  min-height: 30px;
+    @media (min-width: $tablet-width) {
+      margin: 0 70px 0;
 
-  &:last-child {
-    margin: 0;
+      width: 570px;
+
+      display: flex;
+      flex-wrap: wrap;
+      gap: 22px 123px;
+    }
+  }
+
+  .additional__item {
+    margin: 0 0 13px;
+
+    min-width: 221px;
+    min-height: 30px;
+
+    &:last-child {
+      margin: 0;
+    }
   }
 }
