--- a/source/sass/blocks/nutrition.scss
+++ b/source/sass/blocks/nutrition.scss
@@ -87,6 +87,10 @@
 
     background: url("../img/nutrition-package-mobile.png") no-repeat top center;
 
+    // @media (min-resolution: 2dppx) {
+    //   background-image: url("../img/nutrition-package-mobile@2x.png");
+    // }
+
     @media (min-width: $tablet-width) {
       display: none;
     }
@@ -113,6 +117,10 @@
     top: 0;
     left: 0;
     z-index: -1;
+
+    // @media (min-resolution: 2dppx) {
+    //   background-image: url("../img/bg-nutrition-mobile@2x.png");
+    // }
 
     @media (min-width: $tablet-width) {
       display: none;
