--- a/source/sass/blocks/form-page.scss
+++ b/source/sass/blocks/form-page.scss
@@ -32,10 +32,9 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin: 0 auto;
+    margin: 0 auto 66px;
     padding: 0;
 
     width: 1220px;
-    // max-width: 390px;
   }
 }
