--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -6,6 +6,22 @@
   }
 }
 
+.form__wrapper-info {
+  @media (max-width: $tablet-width-only) {
+    display: none;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 auto;
+
+    display: flex;
+    column-gap: 80px;
+    row-gap: 40px;
+
+    width: 1220px;
+  }
+}
+
 .form__button {
   margin: 0 20px 22px;
   padding: 10px 44px;
@@ -26,6 +42,12 @@
   @media (min-width: $tablet-width) {
     &:nth-child(2) {
       margin: 0 70px 45px;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    &:nth-child(2) {
+      margin: 0;
     }
   }
 }
