--- a/source/sass/blocks/info.scss
+++ b/source/sass/blocks/info.scss
@@ -6,6 +6,12 @@
     padding: 0 0 72px;
     border-bottom: none;
   }
+
+  @media (min-width: $desktop-width) {
+    padding: 0;
+
+    width: 570px;
+  }
 }
 
 .info__list {
