--- a/source/sass/components/text-input.scss
+++ b/source/sass/components/text-input.scss
@@ -12,6 +12,10 @@
   @media (min-width: $tablet-width) {
     padding: 0 70px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding: 0;
+  }
 }
 
 .text-input__label {
