--- a/source/sass/blocks/comments.scss
+++ b/source/sass/blocks/comments.scss
@@ -21,6 +21,10 @@
   @media (min-width: $tablet-width) {
     padding: 0 0 71px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding: 0 0 79px;
+  }
 }
 
 .comments__title {
@@ -40,6 +44,10 @@
     position: relative;
     top: -17px;
   }
+
+  @media (min-width: $tablet-width) {
+    margin: 0 0 53px 30px;
+  }
 }
 
 .comments__textarea {
@@ -47,5 +55,9 @@
 
   @media (min-width: $tablet-width) {
     margin: 0 68px 0 70px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 auto;
   }
 }
