--- a/source/sass/components/checkbox-input.scss
+++ b/source/sass/components/checkbox-input.scss
@@ -34,6 +34,10 @@
       width: 40px;
       height: 40px;
     }
+
+    @media (min-width: $desktop-width) {
+      top: -1px;
+    }
   }
 
   &::after {
@@ -55,6 +59,10 @@
       top: 7px;
       left: 7px;
     }
+
+    @media (min-width: $desktop-width) {
+      top: 6px;
+    }
   }
 
   &:hover {
@@ -69,6 +77,10 @@
     padding: 6px 0 0 60px;
 
     font: $font-label-tablet;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding: 5px 0 0 60px;
   }
 }
 
