--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -19,62 +19,66 @@
   }
 
   @media (min-width: $tablet-width) {
-    padding: 0 0 44px;
+    padding: 0 0 46px;
   }
 
-  .additional__title {
-    margin: 0 0 33px;
-    padding: 0 0 0 20px;
+  @media (min-width: $desktop-width) {
+    padding: 0 0 64px;
+  }
+}
 
-    width: 181px;
+.additional__title {
+  margin: 0 0 33px;
+  padding: 0 0 0 20px;
 
-    background-color: $background-color-2;
+  width: 181px;
 
-    @media (min-width: $tablet-width) {
-      margin: 0 0 32px 30px;
-      padding: 0 0 0 39px;
+  background-color: $background-color-2;
 
-      width: 292px;
+  @media (min-width: $tablet-width) {
+    margin: 0 0 32px 30px;
+    padding: 0 0 0 39px;
 
-      position: relative;
-      top: -17px;
-    }
+    width: 292px;
+
+    position: relative;
+    top: -17px;
+  }
+}
+
+.additional__list {
+  @include list-reset;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 70px -2px;
+
+    width: 570px;
+
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px 123px;
   }
 
-  .additional__list {
-    @include list-reset;
+  @media (min-width: $desktop-width) {
+    margin: 0 auto;
 
-    @media (min-width: $tablet-width) {
-      margin: 0 70px 0;
+    gap: 30px 104px;
 
-      width: 570px;
+    width: 1220px;
+  }
+}
 
-      display: flex;
-      flex-wrap: wrap;
-      gap: 22px 123px;
-    }
+.additional__item {
+  margin: 0 0 13px;
 
-    @media (min-width: $desktop-width) {
-      margin: 0 auto;
+  min-width: 221px;
+  min-height: 30px;
 
-      gap: 30px 104px;
-
-      width: 1220px;
-    }
+  &:last-child {
+    margin: 0;
   }
 
-  .additional__item {
-    margin: 0 0 13px;
-
-    min-width: 221px;
-    min-height: 30px;
-
-    &:last-child {
-      margin: 0;
-    }
-
-    @media (min-width: $desktop-width) {
-      margin: 0;
-    }
+  @media (min-width: $desktop-width) {
+    margin: 0;
   }
 }
