--- a/source/sass/blocks/comments.scss
+++ b/source/sass/blocks/comments.scss
@@ -45,7 +45,7 @@
     top: -17px;
   }
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $desktop-width) {
     margin: 0 0 53px 30px;
   }
 }
