--- a/source/sass/blocks/type-program.scss
+++ b/source/sass/blocks/type-program.scss
@@ -3,6 +3,7 @@
   border-bottom: 1px solid $background-color-11;
 
   @media (min-width: $tablet-width) {
+    margin: 0 70px;
     padding: 27px 27px 21px;
     border: 1px solid $background-color-16;
 
