приступил к catalog-page, стилизовал основной заголовок

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -50,3 +50,4 @@
 @import "./blocks/comments.scss";
 @import "./blocks/form.scss";
 @import "./blocks/map.scss";
+@import "./blocks/catalog-page.scss";
