--- a/source/sass/blocks/nutrition.scss
+++ b/source/sass/blocks/nutrition.scss
@@ -87,9 +87,9 @@
 
     background: url("../img/nutrition-package-mobile.png") no-repeat top center;
 
-    // @media (min-resolution: 2dppx) {
-    //   background-image: url("../img/nutrition-package-mobile@2x.png");
-    // }
+    @media (min-resolution: 2dppx) {
+      background: url("../img/nutrition-package-mobile@2x.png");
+    }
 
     @media (min-width: $tablet-width) {
       display: none;
@@ -118,9 +118,9 @@
     left: 0;
     z-index: -1;
 
-    // @media (min-resolution: 2dppx) {
-    //   background-image: url("../img/bg-nutrition-mobile@2x.png");
-    // }
+    @media (min-resolution: 2dppx) {
+      background: url("../img/bg-nutrition-mobile@2x.png");
+    }
 
     @media (min-width: $tablet-width) {
       display: none;
