Добавил несколько компонентов, стилизовал catalog-card

--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -28,6 +28,7 @@ $color-15: #64a63b;
 $color-16: #e7e7e7;
 $color-17: #ff8282;
 $color-18: #bababa;
+$color-19: #ebebeb;
 
 /* background-color */
 $background-color-1: #000000;
@@ -48,6 +49,7 @@ $background-color-15: #64a63b;
 $background-color-16: #e7e7e7;
 $background-color-17: #ff8282;
 $background-color-18: #bababa;
+$background-color-19: #ebebeb;
 
 /* button-fonts */
 $font-button-mobile: 400 1.6rem/1.25 "Oswald", "Arial", sans-serif;
@@ -115,6 +117,10 @@ $font-heading-catalog-card-desktop: 400 2rem/1.05 "Oswald", "Arial", sans-serif;
 $font-text-catalog-card-mobile: 400 1.2rem/1.33 "Lato", "Arial", sans-serif;
 $font-text-catalog-card-tablet: 400 1.6rem/1 "Lato", "Arial", sans-serif;
 $font-text-catalog-card-desktop: 400 1.6rem/1 "Lato", "Arial", sans-serif;
+
+$font-button-catalog-card-mobile: 400 1.6rem/1.25 "Oswald", "Arial", sans-serif;
+$font-button-catalog-card-tablet: 400 1.6rem/1.25 "Oswald", "Arial", sans-serif;
+$font-button-catalog-card-desktop: 400 1.6rem/1.25 "Oswald", "Arial", sans-serif;
 
 /* additonal-products fonts */
 $font-heading-additional-products-mobile: 400 1.6rem/1 "Oswald", "Arial",
