--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,6 +19,8 @@
 @import "./components/radio-input.scss";
 @import "./components/textarea.scss";
 @import "./components/checkbox-input.scss";
+@import "./components/catalog-card.scss";
+@import "./components/card-show-more.scss";
 
 /* blocks */
 @import "./blocks/page-body.scss";
@@ -34,8 +36,7 @@
 @import "./blocks/location.scss";
 @import "./blocks/main-footer.scss";
 @import "./blocks/social.scss";
-// @import "./blocks/catalog.scss";
-@import "./blocks/catalog-card.scss";
+@import "./blocks/catalog.scss";
 @import "./blocks/additional-products.scss";
 @import "./blocks/additional-product-card.scss";
 // @import "./blocks/main-form.scss";
