--- a/source/sass/blocks/additional-products.scss
+++ b/source/sass/blocks/additional-products.scss
@@ -1,11 +1,43 @@
+.additional-products {
+  position: relative;
+
+  &::before {
+    content: "";
+    display: block;
+
+    width: 100%;
+    height: 2px;
+
+    background-color: $background-color-3;
+
+    position: absolute;
+    top: 15px;
+    left: 0;
+    z-index: -1;
+  }
+}
+
 .additional-products__title {
-  @include margin-reset;
+  @include indent-reset;
+  padding: 0 20px 0;
+
+  position: relative;
+  z-index: 1;
+
+  width: 266px;
+
+  background-color: $background-color-2;
+
   font: $font-title-medium-mobile;
   line-height: 1;
   color: $color-1;
 }
 
+.additional-product__list {
+  @include indent-reset;
+}
+
 .additional-products__gift-text {
-  @include margin-reset;
+  @include indent-reset;
   font: $font-text-gift-mobile;
 }
