--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -29,6 +29,7 @@ $color-16: #e7e7e7;
 $color-17: #ff8282;
 $color-18: #bababa;
 $color-19: #ebebeb;
+$color-20: #5ea235;
 
 /* background-color */
 $background-color-1: #000000;
@@ -50,6 +51,7 @@ $background-color-16: #e7e7e7;
 $background-color-17: #ff8282;
 $background-color-18: #bababa;
 $background-color-19: #ebebeb;
+$background-color-20: #5ea235;
 
 /* button-fonts */
 $font-button-mobile: 400 1.6rem/1.25 "Oswald", "Arial", sans-serif;
