--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -39,8 +39,7 @@
 @import "./blocks/catalog.scss";
 @import "./blocks/additional-products.scss";
 @import "./blocks/info.scss";
-@import "./blocks/label-text.scss";
-@import "./blocks/label-radio.scss";
+@import "./blocks/additional.scss";
 @import "./blocks/contact-details.scss";
 @import "./blocks/comment.scss";
 @import "./blocks/label-checkbox.scss";
