--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -4,4 +4,14 @@
 
 .catalog__list {
   @include list-reset;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 auto;
+
+    display: flex;
+    flex-wrap: wrap;
+    gap: 141px 60px;
+
+    width: 708px;
+  }
 }
