--- a/source/sass/components/catalog-card.scss
+++ b/source/sass/components/catalog-card.scss
@@ -11,7 +11,7 @@
     padding: 0 37px 40px;
 
     grid-template-columns: auto;
-    grid-template-rows: 139px auto auto;
+    grid-template-rows: 139px auto min-content;
     row-gap: 22px;
 
     width: 324px;
@@ -44,7 +44,12 @@
   color: $color-8;
 
   @media (min-width: $tablet-width) {
+    margin: 0 auto 22px;
+
+    width: 159px;
+
     font: $font-heading-catalog-card-tablet;
+    text-align: center;
   }
 }
 
@@ -53,6 +58,16 @@
 
   display: flex;
   justify-content: space-between;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 0 10px;
+    padding: 0 0 5px;
+    border-bottom: 1px solid $background-color-13;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
 
 .catalog-card__quantity-item {
@@ -76,4 +91,9 @@
   grid-column: 1 / -1;
 
   font: $font-button-mobile;
+
+  @media (min-width: $tablet-width) {
+    grid-column: 1 / -1;
+    grid-row: 3 / 4;
+  }
 }
