--- a/source/sass/components/card-show-more.scss
+++ b/source/sass/components/card-show-more.scss
@@ -2,6 +2,15 @@
   padding: 25px 20px 24px;
   border-top: 1px solid $background-color-19;
   border-bottom: 1px solid $background-color-19;
+
+  @media (min-width: $tablet-width) {
+    padding: 48px 35px 40px;
+
+    width: 324px;
+    min-height: 429px;
+
+    border: 2px solid $background-color-4;
+  }
 }
 
 .card-show-more__image {
@@ -14,6 +23,10 @@
   left: 50%;
 
   transform: translateX(-50%);
+
+  @media (min-width: $tablet-width) {
+    margin: 0 0 51px;
+  }
 }
 
 .card-show-more__heading {
@@ -25,6 +38,14 @@
   font: $font-heading-catalog-card-mobile;
   text-transform: uppercase;
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 auto 25px;
+
+    width: 135px;
+
+    font: $font-heading-catalog-card-tablet;
+  }
 }
 
 .card-show-more__text {
@@ -36,6 +57,14 @@
   font: $font-text-catalog-card-mobile;
   color: $color-5;
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 auto 84px;
+
+    width: 170px;
+
+    font: $font-text-catalog-card-tablet;
+  }
 }
 
 .card-show-more__link {
