--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -125,6 +125,13 @@ $font-button-catalog-card-tablet: 400 1.6rem/1.25 "Oswald", "Arial", sans-serif;
 $font-button-catalog-card-desktop: 400 1.6rem/1.25 "Oswald", "Arial", sans-serif;
 
 /* additonal-products fonts */
+$font-title-additional-products-mobile: 400 2.4rem/1 "Oswald", "Arial",
+  sans-serif;
+$font-title-additional-products-tablet: 400 3.6rem/1 "Oswald", "Arial",
+  sans-serif;
+$font-title-additional-products-desktop: 400 3.6rem/1 "Oswald", "Arial",
+  sans-serif;
+
 $font-heading-additional-products-mobile: 400 1.6rem/1 "Oswald", "Arial",
   sans-serif;
 $font-heading-additional-products-tablet: 400 2rem/1 "Oswald", "Arial",
