--- a/source/sass/components/additional-product-card.scss
+++ b/source/sass/components/additional-product-card.scss
@@ -7,6 +7,23 @@
   grid-template-rows: auto auto auto;
 
   width: calc(100% - 40px);
+
+  @media (min-width: $tablet-width) {
+    margin: 0;
+    padding: 26px 38px 27px;
+
+    grid-template-columns: 1fr 223px;
+    grid-template-rows: auto auto;
+    gap: 25px 0;
+
+    width: auto;
+
+    // border-bottom: 1px solid blue;
+
+    // &:last-child {
+    //   border-bottom: none;
+    // }
+  }
 }
 
 .additional-product-card__heading {
@@ -18,6 +35,17 @@
   text-transform: uppercase;
 
   grid-column: 1 / -1;
+
+  @media (min-width: $tablet-width) {
+    margin: 0;
+
+    font: $font-heading-additional-products-tablet;
+
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
 }
 
 .additional-product-card__quantity {
@@ -30,6 +58,21 @@
   justify-content: space-between;
 
   grid-column: 1 / -1;
+
+  @media (min-width: $tablet-width) {
+    margin: 0;
+
+    font: $font-text-additional-products-tablet;
+
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+
+    justify-content: flex-end;
+    gap: 0 51px;
+
+    position: relative;
+    top: 2px;
+  }
 }
 
 .additional-product-card__quantity-item {
