--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -30,6 +30,7 @@ $color-17: #ff8282;
 $color-18: #bababa;
 $color-19: #ebebeb;
 $color-20: #5ea235;
+$color-21: #cdcdcd;
 
 /* background-color */
 $background-color-1: #000000;
@@ -52,6 +53,7 @@ $background-color-17: #ff8282;
 $background-color-18: #bababa;
 $background-color-19: #ebebeb;
 $background-color-20: #5ea235;
+$background-color-21: #cdcdcd;
 
 /* button-fonts */
 $font-button-mobile: 400 1.6rem/1.25 "Oswald", "Arial", sans-serif;
