экспортировал задний фон в gift под все разрешения

--- a/source/sass/blocks/gift.scss
+++ b/source/sass/blocks/gift.scss
@@ -6,8 +6,7 @@
   width: 280px;
   min-height: 290px;
 
-  background: url("../img/bg-additional-products-gift-mobile.jpg") no-repeat
-    center;
+  background: url("../img/bg-gift-mobile.jpg") no-repeat center;
   background-size: cover;
 }
 
